lintian (2.5.15) UNRELEASED; urgency=low

  * checks/*.pm:
    + [NT] Add final return to all subs in checks and ensure
      that the "run" sub complies with Lintian's own
      recommendation.
  * checks/systemd.{desc,pm}:
    + [NT] New check for systemd related files.  Thanks to
      Michael Stapelberg for providing the check and the
      tests.  (Closes: #704197)

  * collection/copyright-file:
    + [NT] Avoid creating an empty copyright file when it is
      not needed.

  * data/fields/virtual-packages:
    + [NT] Refresh.
  * data/files/{fonts,locale-codes}:
    + [NT] Refresh.
  * data/menu-format/add-categories:
    + [NT] Apply patch from Bastien Roucariès to include newer
      categories.  Thanks to Yves-Alexis Perez for the report.
      (Closes: #712932)
  * data/output/manual-references:
    + [NT] Refresh.

  * debian/dirs:
    + [NT] Remove /var/lib/lintian, we no longer use it.
  * debian/docs:
    + [NT] Add auto-generated API documentation.
  * debian/rules:
    + [NT] Generate API documentation during build.

  * lib/Lintian/Collect/Source.pm:
    + [NT] "binaries" and "binary_field" now only exposes data
      about entries in d/control with a valid package name.
    + [NT] Document that "binaries" return an unorderd list.

 -- Niels Thykier <niels@thykier.net>  Sat, 29 Jun 2013 21:11:09 +0200

lintian (2.5.14) unstable; urgency=low

  * Summary of tag changes:
    + Removed:
      - upstream-version-not-numeric

  * checks/*:
    + [NT] Rename all checks to include the extension ".pm".
      (Closes: #710405)
    + [JW] Fix typos in several files.
  * checks/binaries.pm:
    + [NT] Also check for the presence of "mcount" to detect
      whether a binary was compiled with profiling.
      (Closes: #712124)
    + [NT] Ignore "teH" when checking for spelling mistakes in
      ELF binaries.  Thanks to Ryan Kavanagh for the report.
      (Closes: #711207)
  * checks/cruft.pm:
    + [NT] Revise a few tests that relied on file(1) on text files.