@@ -271,3 +271,11 @@ Info: Lintian found a spelling error in the manpage. Lintian has a list
  avoid making the translations fuzzy.  With gettext, for example, this
  means you should also fix the spelling mistake in the corresponding
  msgids in the *.po files.
+
+Tag: manpage-named-after-build-path
+Severity: important
+Certainty: certain
+Info: The manual page appear to be named after its build path and
+ not after its content.
+ .
+ Please check your debian/rules or upstream Makefile.
