@@ -1,9 +1,17 @@
 lintian (2.5.15) UNRELEASED; urgency=low
 
+  * Summary of tag changes:
+    + Added:
+      - manpage-named-after-build-path
+
   * checks/*.pm:
     + [NT] Add final return to all subs in checks and ensure
       that the "run" sub complies with Lintian's own
       recommendation.
+  * checks/manpages.{desc,pm}:
+    + [NT] Apply patch from Bastien Roucariès to test for
+      manpages named after their build path.
+      (Closes: #713884)
   * checks/systemd.{desc,pm}:
     + [NT] New check for systemd related files.  Thanks to
       Michael Stapelberg for providing the check and the
